// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for color: background-default and hasLabel: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  min-height: 54px;
  padding: 4px 54px 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: [object Object];
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: 14px;
  line-height: 22px;
}
.icon {
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  top: 50%;
  right: 10px;
  transform: translate3d(0, -50%, 0);
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default and hasLabel: dark 2`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  min-height: 54px;
  padding: 4px 54px 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #0E0E12;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: [object Object];
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.icon {
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  top: 50%;
  right: 10px;
  transform: translate3d(0, -50%, 0);
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default and hasLabel: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  min-height: 54px;
  padding: 4px 54px 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: [object Object];
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: 14px;
  line-height: 22px;
}
.icon {
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  top: 50%;
  right: 10px;
  transform: translate3d(0, -50%, 0);
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default and hasLabel: light 2`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  min-height: 54px;
  padding: 4px 54px 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #FFF;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: [object Object];
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.icon {
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  top: 50%;
  right: 10px;
  transform: translate3d(0, -50%, 0);
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface and hasLabel: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  min-height: 54px;
  padding: 4px 54px 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #212225;
  color: #FBFCFF;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: [object Object];
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(126, 127, 130, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #AFB0B3;
  font-size: 14px;
  line-height: 22px;
}
.icon {
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  top: 50%;
  right: 10px;
  transform: translate3d(0, -50%, 0);
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface and hasLabel: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  position: relative;
  min-height: 54px;
  padding: 4px 54px 4px 12px;
  border-radius: 4px;
  border: 0;
  cursor: pointer;
  background: #EEEFF2;
  color: #010205;
  text-align: left;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  outline: 0;
}
button::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 8px;
}
button:focus::before {
  border-color: #0A0AFF;
}
button:focus:not(:focus-visible)::before {
  border-color: transparent;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: [object Object];
}
@media(hover:hover) {
  button:hover > .icon {
    background-color: rgba(148, 149, 152, 0.20);
  }
}

.label {
  display: block;
  margin-bottom: -4px;
  color: #535457;
  font-size: 14px;
  line-height: 22px;
}
.icon {
  position: absolute;
  flex-wrap: wrap;
  align-content: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  top: 50%;
  right: 10px;
  transform: translate3d(0, -50%, 0);
  transition: background-color var(--p-transition-duration, .24s) ease;
  border-radius: 4px;
}
.sr-only {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}"
`;
